wider tariff repair popup width. label alias and dimension, table alignment

--- a/web-frontend/src/assets/scss/common/custom.scss
+++ b/web-frontend/src/assets/scss/common/custom.scss
@@ -1462,6 +1462,10 @@ $breakpoints: (
   width: 240px;
 }
 
+.sidebar .menu .list a span {
+  font-size: 0.9rem !important;
+}
+
 section.content {
   margin-left: 272px;
 }
